fix wrong text on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ a:hover {
   display: none;
 }
 
-#signup {
+#apps-open {
   font-size: 18px;
 }
 
